After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 743355 - gdk: report an error when initialization fails
gdk: report an error when initialization fails
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2015-01-22 15:42 UTC by Lionel Landwerlin
Modified: 2015-01-22 17:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gdk: report an error when initialization fails (1.04 KB, patch)
2015-01-22 15:42 UTC, Lionel Landwerlin
reviewed Details | Review
gdk: report an error when initialization fails (1003 bytes, patch)
2015-01-22 15:47 UTC, Lionel Landwerlin
accepted-commit_now Details | Review

Description Lionel Landwerlin 2015-01-22 15:42:10 UTC
Introspection fails in clutter-gst with a bit of a cryptic error :

(ClutterGst-3.0:26330): GLib-CRITICAL **: g_propagate_error: assertion 'src != NULL' failed

This makes the problem a bit more easier to understand.
Comment 1 Lionel Landwerlin 2015-01-22 15:42:12 UTC
Created attachment 295191 [details] [review]
gdk: report an error when initialization fails
Comment 2 Emmanuele Bassi (:ebassi) 2015-01-22 15:44:46 UTC
Review of attachment 295191 [details] [review]:

apart from the coding style, looks good to me.
Comment 3 Lionel Landwerlin 2015-01-22 15:47:40 UTC
Created attachment 295192 [details] [review]
gdk: report an error when initialization fails
Comment 4 Emmanuele Bassi (:ebassi) 2015-01-22 16:03:44 UTC
Review of attachment 295192 [details] [review]:

LGTM
Comment 5 Lionel Landwerlin 2015-01-22 17:36:37 UTC
Pushed to master.