gdk: report an error when initialization fails

https://bugzilla.gnome.org/show_bug.cgi?id=743355